--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -23,21 +23,18 @@ body {
   font-family: sans-serif;
 }
 
-.container {
-  width: 80%;
-  max-width: 750px;
-  margin: 0 auto;
+.intro{
   background: #23424a;
   color: white;
   padding: 3.125rem 0;
 }
 
-.intro-content {
-  width: 50%;
-}
-
-.more-content{
+.container {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
+}
+
+.intro-content {
+  width: 50%;
 }
